force-app/main/default/objects/Service_Type_Matrix__c/Service_Type_Matrix__c.object-meta.xml
<CustomObject>
    <label>Service Type Matrix</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Service Type Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Type Matrixs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>