force-app/main/default/objects/Service_Type_Matrix__c/fields/Closed_By_BU_Code__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_BU_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed By BU Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>