force-app/main/default/objects/Service_Type_Matrix__c/fields/Display_on_OneApp__c.field-meta.xml
<CustomField>
    <fullName>Display_on_OneApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display on Touch</label>
    <type>Checkbox</type>
</CustomField>