force-app/main/default/objects/Service_Type_Matrix__c/fields/Issue_for_ONEAPP_TH__c.field-meta.xml
<CustomField>
    <fullName>Issue_for_ONEAPP_TH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue for Touch_TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>