force-app/main/default/objects/Service_Type_Matrix__c/fields/Product_Service_TH__c.field-meta.xml
<CustomField>
    <fullName>Product_Service_TH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product/Service_TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>