force-app/main/default/objects/Service_Type_Matrix__c/fields/Responsible_BU__c.field-meta.xml
<CustomField>
    <fullName>Responsible_BU__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>1. If assign to specific user, input user id.
ex. 34506, 2395

2. If assign dynamic user related to customer in put formula field.
ex. Customer_Owner_ID__c
Customer_BRC_User__c
Customer_Wealth_RM_BM__c

3. If assign to bu name in put BU Name.</inlineHelpText>
    <label>Responsible BU (Hop 1)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>