force-app/main/default/objects/Service_Type_Matrix__c/fields/Responsible_BU_Code__c.field-meta.xml
<CustomField>
    <fullName>Responsible_BU_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Responsible BU Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>