force-app/main/default/objects/Service_Type_Matrix__c/fields/Responsible_BU_Hop_4__c.field-meta.xml
<CustomField>
    <fullName>Responsible_BU_Hop_4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Responsible BU (Hop 4)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>