force-app/main/default/objects/Service_Type_Matrix__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>PTA Segment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RBG</fullName>
            </value>
            <value>
                <fullName>SBG</fullName>
            </value>
            <value>
                <fullName>WBG</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>