force-app/main/default/objects/Service_Type_Matrix__c/fields/Service_Level1__c.field-meta.xml
<CustomField>
    <fullName>Service_Level1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Level1</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>