force-app/main/default/objects/Service_Type_Matrix__c/fields/Service_Level2__c.field-meta.xml
<CustomField>
    <fullName>Service_Level2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Level2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>