force-app/main/default/objects/Service_Type_Matrix__c/fields/Service_Template__c.field-meta.xml
<CustomField>
    <fullName>Service_Template__c</fullName>
    <label>Service Template</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>CardProduct</fullName>
            </value>
            <value>
                <fullName>DepositWithdraw</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>MoneyTransfer</fullName>
            </value>
            <value>
                <fullName>CheckInvalidTransfer</fullName>
            </value>
            <value>
                <fullName>BillPayTopup</fullName>
            </value>
            <value>
                <fullName>CreditService</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>KYCReview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>