force-app/main/default/objects/Service_Type_Matrix__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>