force-app/main/default/objects/Service_Type_Matrix__c/fields/SLA_Closed_By_BU_Day__c.field-meta.xml
<CustomField>
    <fullName>SLA_Closed_By_BU_Day__c</fullName>
    <label>SLA Closed By BU (Day)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>