force-app/main/default/objects/Service_Type_Matrix__c/fields/SLA_Hop_3_Day__c.field-meta.xml
<CustomField>
    <fullName>SLA_Hop_3_Day__c</fullName>
    <label>SLA Hop 3 (Day)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>