force-app/main/default/objects/Service_Type_Matrix__c/fields/SMS_Code_for_Update_Progress__c.field-meta.xml
<CustomField>
    <fullName>SMS_Code_for_Update_Progress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>SMS Code for update case progress to customer every N days</inlineHelpText>
    <label>SMS Code for Update Progress</label>
    <length>20</length>
    <type>Text</type>
</CustomField>