force-app/main/default/objects/Service_Type_Matrix__c/fields/SMS_Code_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>SMS_Code_In_Progress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Code (In Progress)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>