force-app/main/default/objects/Service_Type_Matrix__c/fields/TAT__c.field-meta.xml
<CustomField>
    <fullName>TAT__c</fullName>
    <inlineHelpText>จากที่ผ่านมา ระยะเวลาโดยเฉลี่ยที่ธนาคารสามารถแก้ไขให้ลูกค้าได้ ประมาณ x วัน</inlineHelpText>
    <label>Total Turnaround Time (Day)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>