force-app/main/default/objects/Service_Type_Matrix__c/fields/UniqueText__c.field-meta.xml
<CustomField>
    <fullName>UniqueText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UniqueText</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>