force-app/main/default/objects/Service_Type_Matrix__c/validationRules/Check_resolution_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_resolution_2</fullName>
    <active>true</active>
    <errorConditionFormula>if(OR(AND( TEXT(Resolution_2__c) = &apos;&apos;,  SMS_Code_Resolution_2__c &lt;&gt; null), AND( Text(Resolution_2__c) &lt;&gt; &apos;&apos;,  SMS_Code_Resolution_2__c = null)), true,false)</errorConditionFormula>
    <errorDisplayField>Resolution_2__c</errorDisplayField>
    <errorMessage>กรุณาระบุค่าให้ครบถ้วนทั้ง Resolution 2 และ  SMS Code Resolution 2</errorMessage>
</ValidationRule>