force-app/main/default/objects/Service_Type_Matrix__c/validationRules/Validate_Journey.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Journey</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Service_Level1__c = &apos;Complaint&apos; , Journey__c = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Journey__c</errorDisplayField>
    <errorMessage>If Complaint issue, Please input value.</errorMessage>
</ValidationRule>