force-app/main/default/objects/Service_Type_Matrix__c/validationRules/Validate_Problem_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Problem_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Service_Level1__c = &apos;Complaint&apos; , Problem_Type__c = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Problem_Type__c</errorDisplayField>
    <errorMessage>If Complaint issue, Please input value.</errorMessage>
</ValidationRule>