force-app/main/default/objects/Service_Type_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Validate_Code__c</columns>
    <columns>Segment__c</columns>
    <columns>Service_Level1__c</columns>
    <columns>Service_Level2__c</columns>
    <columns>Service_Level3__c</columns>
    <columns>Service_Level4__c</columns>
    <columns>Responsible_BU__c</columns>
    <columns>SLA__c</columns>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>SMS_Code_for_Update_Progress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Level2__c</field>
        <operation>equals</operation>
        <value>KYC</value>
    </filters>
    <label>All</label>
</ListView>