force-app/main/default/objects/Service_Type_Matrix__c/listViews/RBG_Service_Type_Matrix.listView-meta.xml
<ListView>
    <fullName>RBG_Service_Type_Matrix</fullName>
    <columns>Validate_Code__c</columns>
    <columns>Segment__c</columns>
    <columns>Service_Level1__c</columns>
    <columns>Service_Level2__c</columns>
    <columns>Service_Level3__c</columns>
    <columns>Service_Level4__c</columns>
    <columns>Responsible_BU__c</columns>
    <columns>Closed_By_BU__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>RBG,ME</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>RBG Service Type Matrix</label>
</ListView>